--- a/style.css
+++ b/style.css
@@ -82,3 +82,55 @@ header {
   color: white;
   text-shadow: 2px 2px 5px black;
 }
+
+@media (min-width: 1000px) {
+  body {
+    background-image: url("./images/bg-desktop.svg");
+    background-size: cover;
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+    margin-top: 2em;
+  }
+
+  .logo {
+    max-width: 15%;
+    margin-top: 4em;
+  }
+
+  .screenshot {
+    max-width: 50%;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+    max-width: 700px;
+  }
+
+  .body-text {
+    font-size: 1.5rem;
+    max-width: 750px;
+  }
+
+  .btn {
+    padding: 1em 4em;
+    font-size: 1.25rem;
+    letter-spacing: 1px;
+  }
+
+  .social-links {
+    width: max-content;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 6em;
+  }
+
+  footer {
+    width: max-content;
+    margin: 3em auto 0 auto;
+  }
+}
